kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-registration-service
  labels:
    app: event-registration-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: event-registration-app
